[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
categories = ["graphics"]
description = "A crate for converting colors between different color spaces"
documentation = "https://docs.rs/tincture"
edition = "2018"
homepage = "https://github.com/arzg/tincture"
keywords = ["color", "colorspace", "rgb"]
license = "MIT OR Apache-2.0"
name = "tincture"
readme = "README.md"
repository = "https://github.com/arzg/tincture"
version = "0.3.0"

[dependencies]
