[package]
categories = ["graphics"]
documentation = "https://docs.rs/tincture"
edition = "2018"
homepage = "https://github.com/arzg/tincture"
keywords = ["color", "colorspace", "rgb"]
license = "MIT OR Apache-2.0"
name = "tincture"
readme = "README.md"
repository = "https://github.com/arzg/tincture"
version = "0.5.0"
