[package]
categories = ["graphics"]
description = "Convert colors between sRGB, Oklab and related color spaces"
documentation = "https://docs.rs/tincture"
edition = "2021"
homepage = "https://github.com/arzg/tincture"
keywords = ["color", "colorspace", "rgb"]
license = "MIT OR Apache-2.0"
name = "tincture"
readme = "README.md"
repository = "https://github.com/arzg/tincture"
version = "1.0.0"
